# BCForth

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
include/: BaseDefinitions.h  ForthInterpreter.h
include/ESP32/: ESP32_config.h
include/Interfaces/: Interfaces.h
include/Modules/: CoreModule.h  Modules.h  TimeModule.h
include/Words/: SystemWords.h  Words.h
main/: CMakeLists.txt  main.cpp
